--- a/3D_cube_neon_rotate/style.css
+++ b/3D_cube_neon_rotate/style.css
@@ -31,10 +31,29 @@ body {
 
 /* -------- TYPE SELECTORS --------- */
 /* -------- CLASS --------- */
+.containerCube {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .cube {
+  margin: 1em 8em;
   position: relative;
-  width: 300px;
-  height: 300px;
+  width: 308px;
+  height: 308px;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
   -webkit-transform: rotateX(-30deg);
@@ -59,10 +78,15 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: -webkit-gradient(linear, left top, left bottom, from(#151515), to(#00ec00));
-  background: linear-gradient(#151515, #00ec00);
-  -webkit-filter: blur(4px);
-          filter: blur(4px);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(94%, #151515), color-stop(130%, #00ec00));
+  background: linear-gradient(#151515 94%, #00ec00 130%);
+  background: url("https://svgshare.com/i/j72.svg"), -webkit-gradient(linear, left top, left bottom, color-stop(94%, #151515), color-stop(130%, #00ec00));
+  background: url("https://svgshare.com/i/j72.svg"), linear-gradient(#151515 94%, #00ec00 130%);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  -webkit-filter: blur(1px);
+          filter: blur(1px);
 }
 
 .cube .lateral span:nth-child(1) {
@@ -124,8 +148,8 @@ body {
   background-color: rgba(0, 255, 0, 0.5);
   -webkit-transform: translateZ(-350px);
           transform: translateZ(-350px);
-  -webkit-filter: blur(30px);
-          filter: blur(30px);
+  -webkit-filter: blur(20px);
+          filter: blur(20px);
   -webkit-box-shadow: 0 0 220px rgba(0, 255, 0, 0.1), 0 0 300px rgba(0, 255, 0, 0.2), 0 0 400px rgba(0, 255, 0, 0.3);
           box-shadow: 0 0 220px rgba(0, 255, 0, 0.1), 0 0 300px rgba(0, 255, 0, 0.2), 0 0 400px rgba(0, 255, 0, 0.3);
 }
